# CareerOpen-App

./: .dockerignore  .env.example  .env.prod.example  .env.production  .env.test  .eslintrc.cjs  .prettierrc  .vercelignore  CAREEROPEN_ENHANCED.md  DEPLOYMENT.md  Dockerfile  Dockerfile.prod  IMAGE_UPLOAD_GUIDE.md  Procfile  README.md  asset-manifest.json  build.sh  check_backend.py  check_server.py  clean-install.ps1  create-env.js  db.sqlite3  deploy_monitoring.ps1  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  firebaseConfig.js  fix_backend.py  fix_imports.py  fix_imports_simple.py  fix_wsgi_import.py  fresh-build.ps1  index.html  package-lock.json  package.json  pytest.ini  render-build.sh  render-start.sh  render.yaml  restart_and_test.bat  (+51 more)
backend/: .env  (+9 more)
careeropen-backend/: .env.example  .gitignore  API_DOCS.md  __init__.py  activate_job.py  check_application.py  check_db_tables.py  check_imports.py  check_sqlite_tables.py  clean_and_setup.bat  conftest.py  create_superuser.py  create_superuser_fixed.py  create_test_job.py  create_test_user.py  create_test_user_script.py  create_test_users.py  create_user_script.py  db.sqlite3  db.sqlite3.backup  publish_job.py  pytest.ini  render-build.sh  render-start.sh  requirements-clean.txt  requirements-dev.txt  requirements.txt  run.bat  run_test_server.py  run_tests.py  setup.cfg  setup_dev.py  start_dev_server.py  temp_settings.py  test-requirements.txt  test_api.py  test_api_caching.py  test_api_endpoints.py  test_api_simple.py  test_auth.py  (+54 more)
careeropen-backend/.venv_new/: pyvenv.cfg
(+476 files in other folders)
