[metadata]
name = careeropen-backend
version = 0.1.0
description = CareerOpen Backend
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/CareerOpen-App
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    Django>=5.2
    djangorestframework>=3.15
    psycopg2-binary>=2.9.9
    redis>=4.6.0
    gunicorn>=21.2.0
    whitenoise>=6.6.0
    boto3>=1.28.0
    django-storages>=1.14.0
    python-dotenv>=1.0.0
